# Symbio

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  computer.py  conftest.py  debug_response.py  dollar_tree_apple_sider_bacon.md  main.py  memory_monitor.py  models.json  planner.py  prompt.md  pyproject.toml  rag.py  raw_generate.py  requirements.txt  seed_training.py  setup.sh  smoke_test.py  switch_model.py  symb  test_adapter_idle.py  test_auto_learn_e2e.py  test_cli.py  test_computer.py  test_deferred_learn.py  test_dispatch.py  test_dynamic_names.py  test_golden.py  test_learn.py  test_learn_e2e.py  test_main_loop.py  test_rag.py  test_streaming.py  test_telegram.py  test_threshold_training.py  test_utils.py
docs/: adapter-marketplace.md
symbio/: __init__.py  agent.py  chat.py  computer.py  config.py  constants.py  learn.py  llm.py  sandbox.py  store.py  tools.py  utils.py
symbio/app/: __init__.py  chat.py  cli.py  config.py  cron.py  dispatch.py  golden.py  learn.py  mcp_bridge.py  memory.py  prompts.py  retrain.py  sandbox.py  sessions.py  telegram.py  tooling.py  training.py  web.py  worker_models.json
symbio/mcp/: __init__.py  benchmark.py  benchmark_mlx.py  config.py  frontier_client.py  learn.py  memory.py  models.py  ollama_client.py  server.py
tests_mcp/: test_memory.py
